--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,12 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - setuptools
     - pip
 
   run:
-    - python
+    - python >=3.6
     - numpy
     - scipy
     - setuptools
