--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,9 +29,12 @@ requirements:
     - numpy
     - scipy
     - setuptools
-    - pymbar >=4.0
+    - pymbar >=4.0.1
     - mdtraj
     - ambertools >=22.0
+    - pint >=0.19,<0.20
+    - openff-units >=0.1.7
+    - openff-utilities
 
 test:
   requires:
