--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "paprika" %}
-{% set version = "1.2.0" %}
+{% set version = "1.3.0" %}
 
 
 package:
@@ -9,7 +9,7 @@ package:
 
 source:
   url: https://github.com/GilsonLabUCSD/pAPRika/archive/v{{ version }}.tar.gz
-  sha256: 0dc4fd3ddd9c9e8a39dba692c7d7df86be3243fcc8462b71f070bb6960946f1b
+  sha256: 908cf569477f34901ca0e29bdaac846797500b94d6673fd37fd331500dced36b
 
 
 build:
@@ -28,17 +28,22 @@ requirements:
     - python >=3.8
     - numpy
     - scipy
+    - parmed
     - setuptools
     - pymbar >=4.0.1
+    - openmm >=7.6.0
     - mdtraj
+    - plumed
+    - pyyaml
+    - intermol
     - ambertools >=22.0
-    - pint >=0.19,<0.20
-    - openff-units >=0.1.7
+    - openff-units >=0.2.0
     - openff-utilities
 
 test:
   requires:
     - pytest
+    - pytest-cov
   imports:
     - paprika
 
